--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "dependencies": {
     "colors": "~1.0.3"
   },
+  "bin": {
+    "boojs": "bin/boo.js"
+  },
   "devDependencies": {
-    "mocha": "~2.0.1"
+    "mocha": "~2.0.1",
+    "should": "~4.3.1"
   },
   "scripts": {
     "test": "mocha",
